<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginLeft="@dimen/fragment_coupon_divider_margin_left_and_right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopId"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shop_list_item_shop_id"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginLeft="@dimen/fragment_coupon_divider_margin_left_and_right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopName"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shop_list_item_shop_name"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginLeft="@dimen/fragment_coupon_divider_margin_left_and_right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopPhoneNo"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shop_list_item_shop_phone_no"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginLeft="@dimen/fragment_coupon_divider_margin_left_and_right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopAddress"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shop_list_item_shop_address"
            android:textSize="@dimen/shop_item_tv_text_size"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>