<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/fragment_coupon_add_coupon_id_textview_width"
            android:layout_height="@dimen/fragment_coupon_add_coupon_id_textview_height"
            android:textSize="@dimen/fragment_coupon_add_coupon_id_textview_size"
            android:layout_gravity="center"
            android:text="@string/fragment_coupon_add_coupon_id"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_coupon_add_coupon_id_textview_height"
            android:textSize="@dimen/fragment_coupon_add_coupon_id_textview_size"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/coupon_list_item_coupon_id_tv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/fragment_coupon_add_coupon_id_textview_width"
            android:layout_height="@dimen/fragment_coupon_add_coupon_id_textview_height"
            android:textSize="@dimen/fragment_coupon_add_coupon_id_textview_size"
            android:layout_gravity="center"
            android:text="@string/Description"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_coupon_add_coupon_id_textview_height"
            android:textSize="@dimen/fragment_coupon_add_coupon_id_textview_size"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/coupon_list_item_coupon_description_tv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/fragment_coupon_add_coupon_id_textview_width"
            android:layout_height="@dimen/fragment_coupon_add_coupon_id_textview_height"
            android:textSize="@dimen/fragment_coupon_add_coupon_id_textview_size"
            android:layout_gravity="center"
            android:text="@string/fragment_rule_number"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_coupon_add_coupon_id_textview_height"
            android:textSize="@dimen/fragment_coupon_add_coupon_id_textview_size"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/coupon_list_item_coupon_number_tv"/>
    </LinearLayout>

</LinearLayout>