<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container_receipt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">
                <LinearLayout
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/receipt_margin_left">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/receipt_tv_shopname"
                            android:textSize="@dimen/receipt_tv_size_shopname"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/receipt_tv_shop_address"
                            android:textSize="@dimen/receipt_tv_size_shop_address"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/receipt_tv_shop_phonenumber"
                            android:textSize="@dimen/receipt_tv_size_shop_address"
                            android:layout_gravity="center"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/receipt_date"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/receipt_tv_size_shop_address"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/receipt_tv_size_shop_address"
                                    android:id="@+id/receipt_tv_date"
                                    />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/receipt_time"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/receipt_tv_size_shop_address"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/receipt_tv_size_shop_address"
                                    android:id="@+id/receipt_tv_time"
                                    />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/receipt_number"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/receipt_tv_size_shop_address"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/receipt_tv_size_shop_address"
                                    android:id="@+id/receipt_tv_number"
                                    />
                            </LinearLayout>

                        </LinearLayout>
                            <!-- item  -->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/item_code"
                                    android:layout_weight="1"
                                    />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/item_quantity"
                                    android:layout_weight="1"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/item_original_price"
                                    android:layout_weight="1"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/item_discount"
                                    android:layout_weight="1"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/item_price"
                                    android:layout_weight="1"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:id="@+id/receipt_ll_item_list">
                            </LinearLayout>


                        </LinearLayout>
                        <!-- item end-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text=""
                                android:layout_weight="1"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text=""
                                android:layout_weight="1"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Total"
                                android:gravity="right"
                                android:layout_weight="1"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="cost:"
                                android:layout_weight="1"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/fragment_receipt_total_cost_tv"
                                android:layout_weight="1"/>

                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Coupon:"
                            android:gravity="center"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:id="@+id/fragment_receipt_coupon_tv"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/receipt_im_qrcode"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:id="@+id/receipt_tv_descriptor"/>


                    </LinearLayout>



                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </FrameLayout>
</io.codetail.widget.RevealFrameLayout>